<resources>
    <string name="app_name">To Do List</string>
    <string name="title_activity_login">Giriş</string>
    <string name="prompt_username">Kullanıcı Adı</string>
    <string name="prompt_full_name">İsim</string>
    <string name="prompt_password">Şifre</string>
    <string name="prompt_rewrite_password">Şifre Tekrar</string>
    <string name="action_sign_in">Giriş Yap </string>
    <string name="action_sign_in_short">Giriş Yap</string>
    <string name="welcome">"Hoşgeldiniz!"</string>
    <string name="invalid_username">Geçersiz Kullanıcı Adı</string>
    <string name="invalid_password">Şifre en az 6 karakter olmalı</string>
    <string name="login_failed">"Hatalı Giriş"</string>
    <string name="action_sign_up">"Kayıt Ol"</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Manage menu item -->
    <string name="manage_menu_save">Kaydet</string>
    <string name="manage_menu_delete">Sil</string>
    <string name="manage_menu_add_type">Kategori Değiştir</string>

    <!-- Main menu item -->
    <string name="main_menu_add">Ekle</string>
    <string name="main_menu_profile">Profilim</string>
    <string name="main_menu_logout">Çıkış Yap</string>
    <string name="main_menu_list_type">Liste Çeşitleri</string>

    <!-- Profile menu item -->
    <string name="profile_menu_save">Kaydet</string>
    <string name="profile_menu_logout">Çıkış Yap</string>
    <string name="profile_menu_delete">Hesabımı Sil</string>

    <!-- menu list type -->
    <string name="list_type_menu_add">Ekle</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
